# consensus-project

./: .gitattributes  .gitignore  .nfs00000000041cbf0e000e9346  CHANGELOG.md  CONSENSUS_REGISTRY.v2.yaml  CONSENSUS_REGISTRY.v2a.yaml  CONSENSUS_REGISTRY.yaml  CONTRIBUTING.md  README.md  README_v1.1.md  ROADMAP.md  about.html  add_reminder_form.py  agent_heartbeat_check.py  agent_propagation_test_070725.md  agent_self_assessment.py  ai_console_cloud.py  app.py  auto_commit_kb.py  auto_commit_kb_cron_ready.py  auto_git_sync.py  auto_knowledge_base_sync.py  batch_push_md.py  build_daily_digest.py  centralized_knowledge_base.txt  check_fitness_logs.py  client_secrets.json  consensus_log_20250530_131916.txt  consensus_log_20250530_132227.txt  daily_sms_and_push.py  dashboard.py  dashboard_status_2025.md  debug_twilio.py  email_to_sheet_reminder.py  encrypt_note.py  find_large_files.py  flask_app.py  flask_app_with_query_memory_index.py  generate_token.py  generate_weekly_log_summary.py  (+83 more)
agent-dashboard-ui/: package.json
agents/: .gitkeep  evaluator.py  executor.py  generate_digest.py  log_insights.py  memory_manager.py  planner.py  researcher.py  runner.py  self_improver.py  send_digest.py  supervisor.py  weekly_backup.py
calendar/: Birthdays_rafa8525@gmail.com.ics
common/: twilio_guard.py
config/: 55_Agents___Support_Sites.csv  absorb_cmd.txt
consensus/: file_io_check.txt  main.py  memory_viewer.py  menu.py  scheduled_goal.txt  scheduler.py
consensus_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
csv/: 55_Agents___Support_Sites.csv  (+2 more)
(+810 files in other folders)
