[project]
name = "consensus-system"
version = "0.1.0"
description = "Multi-agent AI framework for goal planning, execution, and memory tracking"
authors = [{ name = "Rafael", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "python-dotenv"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "core", "memory", "prompts", "consensus"]

[project.scripts]
consensus = "consensus.main:run_cli"
